updated the index.cfg to add the button into modo by default

--- a/index.cfg
+++ b/index.cfg
@@ -1,7 +1,30 @@
 <?xml version="1.0"?>
 <configuration kit="csprance_explosivo">
-  <import></import>
-  <atom type="ScriptSystem">
-    <hash type="ScriptAlias" key=""></hash>
-  </atom>
+    <import></import>
+    <atom type="Attributes">
+        <hash type="Sheet" key="85919362446:sheet">
+            <atom type="Label">Explosivo</atom>
+            <atom type="Layout">htoolbar</atom>
+            <atom type="Style">inline</atom>
+            <atom type="IconMode">text</atom>
+            <atom type="IconSize">small</atom>
+            <atom type="Group">Explosivo Toolbar</atom>
+
+            <!--Add it to the main modo modes toolbars-->
+            <hash type="InCategory" key="modoModesTail#tail"> <!-- 701 modo modes tail -->
+                <atom type="Ordinal">49.50.52</atom>
+            </hash>
+
+            <!--Explosivo Button-->
+            <list type="Control" val="cmd Explosivo.toggle">
+                <list type="AltCmd" val="Explosivo.delete">
+                    <atom type="AltCmdLabel">Delete</atom>
+                    <atom type="AltCmdQualifiers">alt</atom>
+                </list>
+                <atom type="Label">Explosivo!</atom>
+                <atom type="StartCollapsed">0</atom>
+            </list>
+
+        </hash>
+    </atom>
 </configuration>
